Fixed choose_city list overflowing beyond page, contained in scroll

--- a/Root/CSS/Component/Root/Base/Choose_City.css
+++ b/Root/CSS/Component/Root/Base/Choose_City.css
@@ -1,9 +1,11 @@
 .choose_city_message {
 	position: absolute;
+	top: 0;
 	left: 0;
 	right: 0;
+	bottom: 0;
 	max-width: 360px;
-	width: 360px;
+	max-height: 440px;
 	margin: auto;
 	font-family: 'Abel';
 	background-color: #FFFFFF;
@@ -38,4 +40,9 @@
 
 .choose_city_message_list div:not(:last-child) {
 	margin-bottom: 10px;
+}
+
+#choose_city_by_periphery_message_list {
+	overflow: auto;
+	max-height: 200px;
 }
